--- a/style.css
+++ b/style.css
@@ -285,7 +285,13 @@ body{
   gap:14px;
   align-items:center;
   justify-content: center;
-  margin-bottom:12px;
+
+  border: none;
+  width: 100%;
+  background: var(--red);
+  color: var(--white);
+  margin: 0;
+  height: calc(var(--spacing) * 16);
 }
 
 .program-day{
@@ -294,14 +300,19 @@ body{
   text-align: center;
 }
 
+.events {
+  display: flex;
+  flex-direction: column;
+  gap: calc(var(--spacing) * 4);
+}
+
 .block{
   overflow:hidden;
-  margin:12px 0;
 }
 
 .block .bar{
-  background: var(--red);
-  color:#fff;
+  background: var(--black);
+  color: var(--white);
   padding:10px 14px;
   font-weight:900;
 }
