--- a/style.css
+++ b/style.css
@@ -344,8 +344,8 @@ body{
 
 .speakers-carousel {
   padding: calc(var(--spacing) * 12) 0;
-  background-color: var(--white);
-  color: var(--black);
+  background-color: var(--black);
+  color: var(--white);
 }
 
 .speakers-carousel h2 {
